--- a/docs/01-architecture-overview.mdx
+++ b/docs/01-architecture-overview.mdx
@@ -61,8 +61,8 @@ graph TD
     G -.Type Safety.-> C
     G -.Type Safety.-> D
 
-    style A fill:#2f95dc,color:#fff
-    style B fill:#2f95dc,color:#fff
+    style A fill:#355e3b,color:#fff
+    style B fill:#355e3b,color:#fff
     style C fill:#4CAF50,color:#fff
     style D fill:#FFA726,color:#fff
     style E fill:#FFA726,color:#fff
@@ -233,7 +233,7 @@ flowchart TD
     Return --> End([Database Ready])
     Error --> End2([App Cannot Start])
 
-    style Start fill:#2f95dc,color:#fff
+    style Start fill:#355e3b,color:#fff
     style Return fill:#4CAF50,color:#fff
     style Cache fill:#4CAF50,color:#fff
     style End fill:#4CAF50,color:#fff
@@ -426,8 +426,8 @@ graph TD
     AddExpense -.Inline Swap.-> Calculator[CalculatorKeypad]
     AddExpense -.Inline Swap.-> Calendar[CalendarPicker]
 
-    style Root fill:#2f95dc,color:#fff
-    style Tabs fill:#2f95dc,color:#fff
+    style Root fill:#355e3b,color:#fff
+    style Tabs fill:#355e3b,color:#fff
     style Home fill:#4CAF50,color:#fff
     style Charts fill:#FFA726,color:#fff
     style More fill:#FFA726,color:#fff
@@ -457,7 +457,7 @@ From `/app/(tabs)/_layout.tsx`:
 ```typescript
 <Tabs
   screenOptions={{
-    tabBarActiveTintColor: '#2f95dc',
+    tabBarActiveTintColor: '#355e3b',
     headerShown: false,
   }}
 >
