--- a/docs/02-database-guide.mdx
+++ b/docs/02-database-guide.mdx
@@ -232,7 +232,7 @@ flowchart TD
     Error --> End
     Return --> Success([Operation Succeeded])
 
-    style Start fill:#2f95dc,color:#fff
+    style Start fill:#355e3b,color:#fff
     style Success fill:#4CAF50,color:#fff
     style Throw fill:#FF6B6B,color:#fff
     style Error fill:#FF6B6B,color:#fff
@@ -594,7 +594,7 @@ flowchart TD
     Fatal --> Log2[Log Fatal Error]
     Log2 --> End2([Cannot Start App])
 
-    style Start fill:#2f95dc,color:#fff
+    style Start fill:#355e3b,color:#fff
     style End fill:#4CAF50,color:#fff
     style End2 fill:#FF6B6B,color:#fff
     style Fatal fill:#FF6B6B,color:#fff
@@ -679,7 +679,7 @@ flowchart LR
     style DB fill:#757575,color:#fff
     style Row fill:#FFA726,color:#fff
     style App fill:#4CAF50,color:#fff
-    style Component fill:#2f95dc,color:#fff
+    style Component fill:#355e3b,color:#fff
     style Input fill:#9C27B0,color:#fff
     style Valid fill:#4CAF50,color:#fff
 ```
