--- a/docs/05-getting-started.mdx
+++ b/docs/05-getting-started.mdx
@@ -98,7 +98,7 @@ flowchart TD
     SeedData --> Ready[App Ready!]
     EmptyDB --> Ready
 
-    style Start fill:#2f95dc,color:#fff
+    style Start fill:#355e3b,color:#fff
     style Ready fill:#4CAF50,color:#fff
     style Troubleshoot fill:#FFA726,color:#fff
 ```
@@ -283,7 +283,7 @@ flowchart LR
     T4 --> Intermediate2[Intermediate Level]
     T5 --> Advanced2[Advanced Level]
 
-    style Start fill:#2f95dc,color:#fff
+    style Start fill:#355e3b,color:#fff
     style Beginner fill:#4CAF50,color:#fff
     style Intermediate fill:#FFA726,color:#fff
     style Intermediate2 fill:#FFA726,color:#fff
@@ -313,7 +313,7 @@ flowchart TD
     Works -->|No| Debug[Check icon name<br/>Verify syntax]
     Debug --> Test
 
-    style Start fill:#2f95dc,color:#fff
+    style Start fill:#355e3b,color:#fff
     style Done fill:#4CAF50,color:#fff
 ```
 
