fix(01): revise plans based on checker feedback
- Updated 01-03 depends_on: ['01-01', '01-02'] (was only 01-01)
- Updated 01-04 depends_on: ['01-01', '01-02'] (was only 01-01)
- Added key_link for category-budgets.ts in 01-03
- Plans 01-03/01-04 now wait for database singleton verification

--- a/.planning/phases/01-database-stabilization/01-03-PLAN.md
+++ b/.planning/phases/01-database-stabilization/01-03-PLAN.md
@@ -3,7 +3,7 @@ phase: 01-database-stabilization
 plan: 03
 type: execute
 wave: 2
-depends_on: ["01-01"]
+depends_on: ["01-01", "01-02"]
 files_modified:
   - lib/db/models/expenses.ts
   - lib/db/models/budgets.ts
@@ -37,6 +37,10 @@ must_haves:
       to: "lib/db/utils/error-mapper.ts"
       via: "maps SQLite errors to user messages"
       pattern: "mapSQLiteErrorToUserMessage"
+    - from: "lib/db/models/category-budgets.ts"
+      to: "lib/db/core/errors.ts"
+      via: "imports and throws DatabaseError"
+      pattern: "import.*DatabaseError.*from.*errors"
 ---
 
 <objective>
