--- a/.planning/phases/01-database-stabilization/01-04-PLAN.md
+++ b/.planning/phases/01-database-stabilization/01-04-PLAN.md
@@ -3,7 +3,7 @@ phase: 01-database-stabilization
 plan: 04
 type: execute
 wave: 2
-depends_on: ["01-01"]
+depends_on: ["01-01", "01-02"]
 files_modified:
   - lib/db/models/categories.ts
   - lib/db/models/net-worth.ts
