fix(02): revise plans based on checker feedback

--- a/.planning/phases/02-category-reliability/02-01-PLAN.md
+++ b/.planning/phases/02-category-reliability/02-01-PLAN.md
@@ -7,6 +7,7 @@ depends_on: []
 files_modified:
   - lib/db/models/categories.ts
   - hooks/useCategories.ts
+  - app/(tabs)/index.tsx
 autonomous: true
 
 must_haves:
@@ -24,6 +25,9 @@ must_haves:
       provides: "Cache invalidation after category updates"
       contains: "onCategoryChanged callback pattern"
       min_lines: 250
+    - path: "app/(tabs)/index.tsx"
+      provides: "Wired refresh callback to expense list"
+      contains: "onCategoryChanged.*refreshExpenses"
   key_links:
     - from: "updateCustomCategoryWithCascade"
       to: "withExclusiveTransactionAsync"
@@ -37,6 +41,10 @@ must_haves:
       to: "cache invalidation callback"
       via: "onCategoryChanged trigger"
       pattern: "onCategoryChanged.*categoryId"
+    - from: "app/(tabs)/index.tsx"
+      to: "refreshExpenses"
+      via: "onCategoryChanged callback wiring"
+      pattern: "onCategoryChanged:.*refreshExpenses"
 ---
 
 <objective>
@@ -44,7 +52,7 @@ Implement cascading category updates to maintain denormalized data consistency a
 
 Purpose: When users rename categories or change icons, all associated expenses must immediately reflect the new metadata. Currently, `updateCustomCategory` only updates the custom_categories table, leaving expenses with stale denormalized data (category_name, category_icon, category_color). This causes UI inconsistencies where old expenses show outdated category information.
 
-Output: Transactional cascading updates + cache invalidation hook pattern ensuring category changes propagate to all dependent data immediately.
+Output: Transactional cascading updates + cache invalidation hook pattern + parent component wiring ensuring category changes propagate to all dependent data immediately.
 </objective>
 
 <execution_context>
@@ -66,7 +74,7 @@ Output: Transactional cascading updates + cache invalidation hook pattern ensuri
 # Current implementation to extend
 @lib/db/models/categories.ts
 @hooks/useCategories.ts
-@lib/db/models/expenses.ts
+@app/(tabs)/index.tsx
 </context>
 
 <tasks>
@@ -196,7 +204,7 @@ export function useCategories(
 2. Verify import: `grep "updateCustomCategoryWithCascade" hooks/useCategories.ts`
 3. Verify callback in interface: `grep "onCategoryChanged" hooks/useCategories.ts`
 4. Verify cascading function used: `grep "updateCustomCategoryWithCascade(db, id, category)" hooks/useCategories.ts`
-5. Verify callback invoked: `grep -A 10 "updateCustomCategoryWithCascade" hooks/useCategories.ts | grep "onCategoryChanged"`
+5. Verify callback invoked: `grep -A 20 'updateCategory.*async' hooks/useCategories.ts | grep 'options?.onCategoryChanged'`
   </verify>
   <done>
 - `useCategories` hook imports and uses `updateCustomCategoryWithCascade`
@@ -209,16 +217,72 @@ export function useCategories(
   </done>
 </task>
 
+<task type="auto">
+  <name>Task 3: Wire onCategoryChanged callback in parent component</name>
+  <files>app/(tabs)/index.tsx</files>
+  <action>
+Wire up the `onCategoryChanged` callback from `useCategories` hook to trigger expense list refresh, completing the cache invalidation chain.
+
+**Implementation details:**
+
+1. Locate where `useCategories` hook is called in app/(tabs)/index.tsx
+
+2. Locate where `useExpenses` hook is called and identify the `refreshExpenses` function (or similar refresh/refetch method)
+
+3. Wire the callback:
+```typescript
+const categories = useCategories({
+  onCategoryChanged: async (categoryId) => {
+    await refreshExpenses(); // or whatever the refresh method is called
+  }
+});
+```
+
+4. If `refreshExpenses` doesn't exist yet:
+   - Check if `useExpenses` returns a `refresh` or `refetch` method
+   - If not, the hook may auto-refresh on mount or need enhancement
+   - In that case, use dependency array or state update to trigger re-render
+
+5. Ensure the callback is properly typed (TypeScript should infer from useCategories interface)
+
+**Why this wiring is critical:** Without this connection, the cascade updates in the database (Task 1) and the callback pattern in the hook (Task 2) would work, but the UI would not reflect changes until the user navigates away and back. The parent component is the bridge that connects category changes to expense list updates.
+
+**Pattern explanation:** This completes the "callback pattern" chain:
+1. User renames category → `useCategories.updateCategory` called
+2. Hook calls `updateCustomCategoryWithCascade` → database updated
+3. Hook calls `options.onCategoryChanged(categoryId)` → callback fired
+4. Parent component's callback calls `refreshExpenses()` → UI refreshed
+5. User sees new category name on ALL expenses immediately
+
+**Reference:**
+- Pattern 2 in 02-RESEARCH.md lines 180-204 shows parent component wiring example
+- The parent component acts as the "coordinator" between independent data domains (categories and expenses)
+  </action>
+  <verify>
+1. TypeScript compiles: `npx tsc --noEmit`
+2. Verify callback wired: `grep -A 5 "useCategories" app/(tabs)/index.tsx | grep "onCategoryChanged"`
+3. Verify refreshExpenses called: `grep -A 10 "onCategoryChanged" app/(tabs)/index.tsx | grep "refreshExpenses\|refresh\|refetch"`
+4. Check full wiring pattern: `grep -B 2 -A 8 "useCategories" app/(tabs)/index.tsx`
+  </verify>
+  <done>
+- `useCategories` hook called with `onCategoryChanged` callback in app/(tabs)/index.tsx
+- Callback invokes expense refresh method (refreshExpenses or equivalent)
+- TypeScript compiles without errors
+- Category changes now trigger automatic expense list refresh
+- Complete cache invalidation chain: database cascade → hook callback → parent refresh
+  </done>
+</task>
+
 </tasks>
 
 <verification>
-After completion, verify category updates cascade correctly:
+After completion, verify category updates cascade correctly and trigger UI refresh:
 
 1. **Compile check:**
    ```bash
    npx tsc --noEmit
    ```
-   Should pass with no errors in categories.ts or useCategories.ts
+   Should pass with no errors in categories.ts, useCategories.ts, or index.tsx
 
 2. **Pattern verification:**
    ```bash
@@ -231,8 +295,11 @@ After completion, verify category updates cascade correctly:
    # Verify hook uses cascading function
    grep "updateCustomCategoryWithCascade(db, id, category)" hooks/useCategories.ts
 
-   # Verify callback pattern
+   # Verify callback pattern in hook
    grep "onCategoryChanged" hooks/useCategories.ts
+
+   # Verify parent component wiring
+   grep -A 5 "useCategories" app/(tabs)/index.tsx | grep "onCategoryChanged"
    ```
 
 3. **Transaction pattern check:**
@@ -241,7 +308,13 @@ After completion, verify category updates cascade correctly:
    grep -n "withExclusiveTransactionAsync" lib/db/models/categories.ts
    ```
 
-All checks should pass. The implementation follows Phase 1 established patterns (exclusive transactions, DatabaseError handling, optimistic updates with rollback).
+4. **Integration check:**
+   ```bash
+   # Verify complete chain from parent to hook to model
+   grep "onCategoryChanged" app/(tabs)/index.tsx hooks/useCategories.ts
+   ```
+
+All checks should pass. The implementation follows Phase 1 established patterns (exclusive transactions, DatabaseError handling, optimistic updates with rollback) and completes the cache invalidation chain from database to UI.
 </verification>
 
 <success_criteria>
@@ -252,17 +325,19 @@ Phase 02 Plan 01 is complete when:
 - [ ] Cascading updates include category_name, category_icon, category_color fields
 - [ ] `useCategories` hook calls cascading function instead of direct update
 - [ ] Hook supports optional `onCategoryChanged` callback for cache invalidation
+- [ ] Parent component (index.tsx) wires callback to refreshExpenses
 - [ ] TypeScript compiles without errors
 - [ ] Error handling follows Phase 1 DatabaseError patterns
 - [ ] Existing validation and optimistic update patterns preserved
+- [ ] Complete cache invalidation chain: database → hook → parent → UI refresh
 
 **Requirements addressed:**
 - CAT-01: Category rename automatically updates all associated expenses ✓ (cascading UPDATE)
 - CAT-02: Category icon changes persist correctly ✓ (cascading UPDATE + atomic transaction)
 - CAT-04: Category operations prevent data corruption ✓ (exclusive transaction ensures atomicity)
+- UI consistency: Expense list automatically refreshes after category changes ✓ (wired callback chain)
 
 **Ready for:**
-- Integration with UI components (parent components can wire up cache invalidation)
 - Phase 02 Plan 02: Position integrity validation (independent, can run in parallel)
 - Phase 03: Category UX improvements (depends on reliable category operations)
 </success_criteria>
@@ -272,8 +347,8 @@ After completion, create `.planning/phases/02-category-reliability/02-01-SUMMARY
 
 Summary should include:
 - Performance metrics (duration, files modified)
-- Accomplishments (cascading updates, cache invalidation pattern)
-- Key decisions (why exclusive transaction, why callback pattern)
+- Accomplishments (cascading updates, cache invalidation pattern, parent wiring)
+- Key decisions (why exclusive transaction, why callback pattern, why parent-level wiring)
 - Files modified with specific changes
-- Integration points for parent components to wire up refreshExpenses callback
+- Integration verification (category change → immediate UI update)
 </output>
