--- a/.planning/phases/02-category-reliability/02-02-PLAN.md
+++ b/.planning/phases/02-category-reliability/02-02-PLAN.md
@@ -2,8 +2,8 @@
 phase: 02-category-reliability
 plan: 02
 type: execute
-wave: 1
-depends_on: []
+wave: 2
+depends_on: ['01']
 files_modified:
   - lib/db/models/categories.ts
 autonomous: true
