--- a/.planning/phases/03-category-ux-improvements/03-01-PLAN.md
+++ b/.planning/phases/03-category-ux-improvements/03-01-PLAN.md
@@ -13,7 +13,7 @@ must_haves:
   truths:
     - "Toast notifications display for category operations"
     - "Toasts appear at top of screen and auto-dismiss"
-    - "Toast provider exists at app root"
+    - "Toast notifications are available throughout the app"
   artifacts:
     - path: "package.json"
       provides: "react-native-toast-message dependency"
