--- a/.planning/phases/03-category-ux-improvements/03-02-PLAN.md
+++ b/.planning/phases/03-category-ux-improvements/03-02-PLAN.md
@@ -10,15 +10,17 @@ autonomous: true
 
 must_haves:
   truths:
+    - "User understands whether they're creating new or renaming existing category"
     - "User sees toast notification when category is created"
     - "User sees toast notification when category is updated"
     - "User sees toast notification when category is deleted"
+    - "User understands how to reorder categories (visual drag affordance clear)"
     - "User feels haptic feedback when starting category drag"
     - "User feels haptic feedback when category reorder completes"
     - "Errors still show as Alert.alert (blocking confirmation for problems)"
   artifacts:
     - path: "components/modals/categories/CategoriesModal.tsx"
-      provides: "Toast-based success feedback and haptic drag feedback"
+      provides: "Toast-based success feedback, haptic drag feedback, and improved rename UI"
       contains: "Toast.show"
       min_lines: 500
   key_links:
@@ -33,10 +35,10 @@ must_haves:
 ---
 
 <objective>
-Replace blocking success alerts with non-intrusive toasts and add haptic feedback to drag operations
+Improve category rename clarity, replace blocking success alerts with toasts, and enhance drag-to-reorder affordance
 
-Purpose: Eliminate modal fatigue from constant success confirmations while providing tactile feedback for drag interactions
-Output: Category operations show brief toast notifications instead of blocking alerts, drag operations have haptic confirmation
+Purpose: Eliminate modal fatigue from constant success confirmations, clarify rename interface for add vs edit modes, and make reorder mechanism more discoverable
+Output: Category operations show brief toast notifications, rename UI shows clear mode indicators, drag operations have visual + haptic feedback
 </objective>
 
 <execution_context>
@@ -58,7 +60,100 @@ Output: Category operations show brief toast notifications instead of blocking a
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Replace success alerts with toast notifications</name>
+  <name>Task 1: Improve rename interface clarity for add vs edit modes</name>
+  <files>components/modals/categories/CategoriesModal.tsx</files>
+  <action>
+Improve the category rename interface to make add vs edit modes clearer:
+
+1. Update the name TextInput placeholder to be mode-specific (line ~279):
+
+**CURRENT:**
+```typescript
+<TextInput
+  style={styles.input}
+  value={name}
+  onChangeText={setName}
+  placeholder="Enter category name"
+  placeholderTextColor="#999"
+  maxLength={20}
+  autoCapitalize="words"
+/>
+```
+
+**REPLACE with:**
+```typescript
+<TextInput
+  style={styles.input}
+  value={name}
+  onChangeText={setName}
+  placeholder={mode === 'add' ? 'e.g., Groceries, Entertainment' : 'Enter new name'}
+  placeholderTextColor="#999"
+  maxLength={20}
+  autoCapitalize="words"
+  autoFocus={true}
+/>
+```
+
+2. Add helper text below the name input (after </TextInput>, before </View> closing tag around line ~283):
+
+```typescript
+              <TextInput
+                style={styles.input}
+                value={name}
+                onChangeText={setName}
+                placeholder={mode === 'add' ? 'e.g., Groceries, Entertainment' : 'Enter new name'}
+                placeholderTextColor="#999"
+                maxLength={20}
+                autoCapitalize="words"
+                autoFocus={true}
+              />
+              {mode === 'edit' && (
+                <Text style={styles.helperText}>
+                  Renaming will update all expenses in this category
+                </Text>
+              )}
+            </View>
+```
+
+3. Add new style to StyleSheet (at end of styles object):
+
+```typescript
+helperText: {
+  fontSize: 13,
+  color: '#666',
+  marginTop: 6,
+  fontStyle: 'italic',
+},
+```
+
+**Rationale:**
+- Mode-specific placeholder provides context (examples for new, "new name" for edit)
+- autoFocus draws attention to the input field immediately
+- Helper text in edit mode clarifies the rename's impact (cascading update)
+- Title already distinguishes mode ("Add Category" vs "Edit Category")
+
+This addresses UX-01 by improving rename interface clarity through contextual placeholders and impact clarification.
+  </action>
+  <verify>
+1. Read CategoriesModal.tsx and confirm:
+   - Placeholder uses ternary operator based on mode
+   - autoFocus={true} added to TextInput
+   - Helper text conditional rendering exists for edit mode
+   - helperText style added to StyleSheet
+2. Test in app:
+```bash
+npm start
+```
+   - Open Categories modal → Tap "+" to add → Should see placeholder "e.g., Groceries, Entertainment" and cursor in field
+   - Tap edit on existing category → Should see placeholder "Enter new name" and helper text "Renaming will update all expenses in this category"
+  </verify>
+  <done>
+Category rename interface clearly distinguishes add mode (with examples) from edit mode (with impact warning), input auto-focuses on open, user understands they're editing an existing category vs creating new
+  </done>
+</task>
+
+<task type="auto">
+  <name>Task 2: Replace success alerts with toast notifications</name>
   <files>components/modals/categories/CategoriesModal.tsx</files>
   <action>
 Replace blocking Alert.alert() success messages with non-blocking Toast.show() calls:
@@ -139,22 +234,39 @@ npm start
    - Trigger validation error (empty name) → should see blocking alert (correct for errors)
   </verify>
   <done>
-Success operations show non-blocking toasts at top of screen for 3 seconds, errors and destructive confirmations still use Alert.alert(), user can continue working immediately after successful operations
+Success operations show non-blocking toasts at top of screen for 3 seconds, errors and destructive confirmations still use Alert.alert(), user can continue working immediately after successful operations (UX-04 fully addressed)
   </done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Add haptic feedback to drag operations</name>
+  <name>Task 3: Add visual drag affordance and haptic feedback to reorder</name>
   <files>components/modals/categories/CategoriesModal.tsx</files>
   <action>
-Add tactile feedback to drag-to-reorder operations using expo-haptics:
+Enhance drag-to-reorder with visual affordance and tactile feedback:
 
 1. Import Haptics at top of file:
 ```typescript
 import * as Haptics from 'expo-haptics';
 ```
 
-2. Modify `renderCategoryItem()` function to add haptic on drag start (around line 164):
+2. Modify drag handle to be visually clearer (around line 171). CURRENT implementation shows menu icon, enhance with accessibility:
+
+**FIND (line ~164-173):**
+```typescript
+<View style={styles.dragHandle}>
+  <Ionicons name="menu" size={24} color="#999" />
+</View>
+```
+
+**REPLACE with:**
+```typescript
+<View style={[styles.dragHandle, { flexDirection: 'row', alignItems: 'center', gap: 4 }]}>
+  <Ionicons name="menu" size={24} color="#355e3b" />
+  <Text style={{ fontSize: 11, color: '#999' }}>Hold</Text>
+</View>
+```
+
+3. Add haptic feedback to the drag handle's onLongPress (around line 171):
 
 **CURRENT implementation (line ~171):**
 ```typescript
@@ -174,12 +286,13 @@ import * as Haptics from 'expo-haptics';
   }}
   disabled={isActive}
   style={styles.dragHandle}
+  accessibilityRole="button"
   accessibilityLabel="Drag to reorder"
   accessibilityHint="Long press and drag to change category order"
 >
 ```
 
-3. Add haptic feedback to `handleReorder()` function for completion confirmation (line ~155):
+4. Add haptic feedback to `handleReorder()` function for completion confirmation (line ~155):
 
 **CURRENT:**
 ```typescript
@@ -206,22 +319,33 @@ const handleReorder = async (data: Category[]) => {
 };
 ```
 
+**Rationale:**
+- Darker green icon (#355e3b instead of #999) makes drag handle more prominent
+- "Hold" text label provides explicit instruction (addresses "easier to understand" in UX-03)
+- Medium impact haptic on drag start provides tactile confirmation
+- Success notification haptic on drop provides completion feedback
+- Accessibility labels enable screen reader support
+
 Research finding: Android-specific `AndroidHaptics.Drag_Start` type is explicitly designed for drag-and-drop gestures. For cross-platform compatibility, `ImpactFeedbackStyle.Medium` provides suitable collision feedback. Success notification type provides distinct "operation complete" tactile confirmation.
 
 Do NOT add toast to reorder - haptic + visual ScaleDecorator feedback is sufficient. Research shows adding toast may be redundant/annoying when visual and tactile feedback already confirm the action.
+
+This addresses UX-03 by making reorder mechanism clearer through visual affordance (darker icon + text label) and tactile feedback.
   </action>
   <verify>
 1. Read CategoriesModal.tsx and confirm:
    - Haptics.impactAsync call in onLongPress handler
    - Haptics.notificationAsync call in handleReorder after successful reorder
+   - Drag handle styling updated with darker icon and "Hold" text
    - Accessibility props added to drag handle
 2. Test on physical device (haptics don't work in simulator):
    - Long press category drag handle → should feel medium impact vibration
    - Drag category to new position and release → should feel success notification vibration
+   - Visual check: Drag handle shows green menu icon + "Hold" text
    - Vibration timing: start of drag + completion (not during drag)
   </verify>
   <done>
-Category drag operations provide haptic feedback at start (medium impact) and completion (success notification), drag handle has accessibility labels for screen readers, haptic feedback enhances perceived responsiveness of drag interactions
+Category drag mechanism is visually clearer (prominent green icon + "Hold" text instruction), provides haptic feedback at start (medium impact) and completion (success notification), drag handle has accessibility labels for screen readers (UX-03 fully addressed)
   </done>
 </task>
 
@@ -229,15 +353,18 @@ Category drag operations provide haptic feedback at start (medium impact) and co
 
 <verification>
 Visual and tactile feedback improvements complete when:
+- Rename interface distinguishes add vs edit mode with contextual placeholders and helper text
 - Category create/update/delete operations show toast notifications (not blocking alerts)
 - Errors and destructive confirmations still use Alert.alert() appropriately
+- Drag handle has visual affordance (darker icon + "Hold" text)
 - Drag operations trigger haptic feedback at start and completion
 - All feedback follows UX research best practices (3sec toasts, appropriate haptic types)
 - Accessibility labels added to drag affordances
 </verification>
 
 <success_criteria>
-- UX-03 partially addressed: Drag mechanism improved with haptic feedback and accessibility labels
+- UX-01 fully addressed: Rename interface clarity improved with mode-specific placeholders and impact warning
+- UX-03 fully addressed: Drag mechanism improved with visual affordance (icon + text) and haptic feedback
 - UX-04 fully addressed: Category changes provide clear visual confirmation via toast notifications
 - Non-blocking feedback pattern established for future use in other modals
 - Haptic feedback pattern established for drag operations across app
