fix(03): revise plans based on checker feedback
Addressed checker issues:
- 03-01: Improved truth phrasing (infrastructure-focused)
- 03-02 Task 1: Added keyboard presentation verification for autoFocus
- 03-02 Task 2: Added toast z-index verification step
- 03-02 Task 3: Corrected icon name (reorder-two, not menu)
- 03-02: Clarified 03-02/03-03 parallel execution safety in success criteria
- Must-haves: Added toast z-index layering truth

--- a/.planning/phases/03-category-ux-improvements/03-01-PLAN.md
+++ b/.planning/phases/03-category-ux-improvements/03-01-PLAN.md
@@ -13,7 +13,7 @@ must_haves:
   truths:
     - "Toast notifications display for category operations"
     - "Toasts appear at top of screen and auto-dismiss"
-    - "Toast notifications are available throughout the app"
+    - "Toast infrastructure is ready for category feedback throughout the app"
   artifacts:
     - path: "package.json"
       provides: "react-native-toast-message dependency"
