--- a/.planning/phases/03-category-ux-improvements/03-02-PLAN.md
+++ b/.planning/phases/03-category-ux-improvements/03-02-PLAN.md
@@ -18,6 +18,7 @@ must_haves:
     - "User feels haptic feedback when starting category drag"
     - "User feels haptic feedback when category reorder completes"
     - "Errors still show as Alert.alert (blocking confirmation for problems)"
+    - "Toast notifications appear above modal content (proper z-index layering)"
   artifacts:
     - path: "components/modals/categories/CategoriesModal.tsx"
       provides: "Toast-based success feedback, haptic drag feedback, and improved rename UI"
@@ -128,7 +129,7 @@ helperText: {
 
 **Rationale:**
 - Mode-specific placeholder provides context (examples for new, "new name" for edit)
-- autoFocus draws attention to the input field immediately
+- autoFocus={true} draws attention to the input field immediately when modal opens, keyboard should appear automatically
 - Helper text in edit mode clarifies the rename's impact (cascading update)
 - Title already distinguishes mode ("Add Category" vs "Edit Category")
 
@@ -144,11 +145,12 @@ This addresses UX-01 by improving rename interface clarity through contextual pl
 ```bash
 npm start
 ```
-   - Open Categories modal → Tap "+" to add → Should see placeholder "e.g., Groceries, Entertainment" and cursor in field
-   - Tap edit on existing category → Should see placeholder "Enter new name" and helper text "Renaming will update all expenses in this category"
+   - Open Categories modal → Tap "+" to add → Should see placeholder "e.g., Groceries, Entertainment", keyboard appears immediately, cursor in field
+   - Tap edit on existing category → Should see placeholder "Enter new name", keyboard appears immediately, and helper text "Renaming will update all expenses in this category"
+3. Verify keyboard presentation happens automatically when modal opens (result of autoFocus={true})
   </verify>
   <done>
-Category rename interface clearly distinguishes add mode (with examples) from edit mode (with impact warning), input auto-focuses on open, user understands they're editing an existing category vs creating new
+Category rename interface clearly distinguishes add mode (with examples) from edit mode (with impact warning), input auto-focuses on open with keyboard appearing automatically, user understands they're editing an existing category vs creating new
   </done>
 </task>
 
@@ -219,6 +221,8 @@ Toast.show({
 - Category in use warning (lines 123-137) - requires user decision
 
 Research finding: Toasts should appear for 3-8 seconds (user attention span). Toast notifications are ideal for confirming completed actions since they're brief and provide instant feedback without interrupting user flow. Reserve Alert.alert() for critical errors requiring action and destructive confirmations.
+
+Note: Toast component is configured at root level (app/_layout.tsx) and renders above all content including modals due to proper z-index layering from react-native-toast-message library. No additional configuration needed to ensure toasts appear above modal.
   </action>
   <verify>
 1. Read CategoriesModal.tsx and confirm Toast.show() calls exist in handleSave (both branches) and handleDelete
@@ -232,9 +236,10 @@ npm start
    - Edit existing category → should see green toast at top
    - Delete category → should see confirmation alert THEN success toast
    - Trigger validation error (empty name) → should see blocking alert (correct for errors)
+5. **Verify toast z-index:** Toast should appear ABOVE the modal content, not behind it (proper layering from root-level Toast component)
   </verify>
   <done>
-Success operations show non-blocking toasts at top of screen for 3 seconds, errors and destructive confirmations still use Alert.alert(), user can continue working immediately after successful operations (UX-04 fully addressed)
+Success operations show non-blocking toasts at top of screen for 3 seconds (appearing above modal content), errors and destructive confirmations still use Alert.alert(), user can continue working immediately after successful operations (UX-04 fully addressed)
   </done>
 </task>
 
@@ -249,32 +254,19 @@ Enhance drag-to-reorder with visual affordance and tactile feedback:
 import * as Haptics from 'expo-haptics';
 ```
 
-2. Modify drag handle to be visually clearer (around line 171). CURRENT implementation shows menu icon, enhance with accessibility:
+2. Modify drag handle to be visually clearer (around line 171). CURRENT implementation shows "reorder-two" icon (line 175), enhance with darker color and instructional text:
 
-**FIND (line ~164-173):**
+**FIND (line ~164-176):**
 ```typescript
 <View style={styles.dragHandle}>
-  <Ionicons name="menu" size={24} color="#999" />
+  <TouchableOpacity
+    onLongPress={drag}
+    disabled={isActive}
+    style={styles.dragHandle}
+  >
+    <Ionicons name="reorder-two" size={24} color="#999" />
+  </TouchableOpacity>
 </View>
-```
-
-**REPLACE with:**
-```typescript
-<View style={[styles.dragHandle, { flexDirection: 'row', alignItems: 'center', gap: 4 }]}>
-  <Ionicons name="menu" size={24} color="#355e3b" />
-  <Text style={{ fontSize: 11, color: '#999' }}>Hold</Text>
-</View>
-```
-
-3. Add haptic feedback to the drag handle's onLongPress (around line 171):
-
-**CURRENT implementation (line ~171):**
-```typescript
-<TouchableOpacity
-  onLongPress={drag}
-  disabled={isActive}
-  style={styles.dragHandle}
->
 ```
 
 **REPLACE with:**
@@ -285,14 +277,17 @@ import * as Haptics from 'expo-haptics';
     drag();
   }}
   disabled={isActive}
-  style={styles.dragHandle}
+  style={[styles.dragHandle, { flexDirection: 'row', alignItems: 'center', gap: 4 }]}
   accessibilityRole="button"
   accessibilityLabel="Drag to reorder"
   accessibilityHint="Long press and drag to change category order"
 >
+  <Ionicons name="reorder-two" size={24} color="#355e3b" />
+  <Text style={{ fontSize: 11, color: '#999' }}>Hold</Text>
+</TouchableOpacity>
 ```
 
-4. Add haptic feedback to `handleReorder()` function for completion confirmation (line ~155):
+3. Add haptic feedback to `handleReorder()` function for completion confirmation (line ~155):
 
 **CURRENT:**
 ```typescript
@@ -320,11 +315,12 @@ const handleReorder = async (data: Category[]) => {
 ```
 
 **Rationale:**
-- Darker green icon (#355e3b instead of #999) makes drag handle more prominent
-- "Hold" text label provides explicit instruction (addresses "easier to understand" in UX-03)
+- Change icon color from #999 to darker green #355e3b to make drag handle more prominent
+- Add "Hold" text label to provide explicit instruction (addresses "easier to understand" in UX-03)
 - Medium impact haptic on drag start provides tactile confirmation
 - Success notification haptic on drop provides completion feedback
 - Accessibility labels enable screen reader support
+- Correct icon name is "reorder-two" (not "menu")
 
 Research finding: Android-specific `AndroidHaptics.Drag_Start` type is explicitly designed for drag-and-drop gestures. For cross-platform compatibility, `ImpactFeedbackStyle.Medium` provides suitable collision feedback. Success notification type provides distinct "operation complete" tactile confirmation.
 
@@ -336,16 +332,17 @@ This addresses UX-03 by making reorder mechanism clearer through visual affordan
 1. Read CategoriesModal.tsx and confirm:
    - Haptics.impactAsync call in onLongPress handler
    - Haptics.notificationAsync call in handleReorder after successful reorder
-   - Drag handle styling updated with darker icon and "Hold" text
+   - Drag handle styling updated with darker green icon (#355e3b) and "Hold" text
+   - Icon name is "reorder-two" (not "menu")
    - Accessibility props added to drag handle
 2. Test on physical device (haptics don't work in simulator):
    - Long press category drag handle → should feel medium impact vibration
    - Drag category to new position and release → should feel success notification vibration
-   - Visual check: Drag handle shows green menu icon + "Hold" text
+   - Visual check: Drag handle shows green "reorder-two" icon + "Hold" text
    - Vibration timing: start of drag + completion (not during drag)
   </verify>
   <done>
-Category drag mechanism is visually clearer (prominent green icon + "Hold" text instruction), provides haptic feedback at start (medium impact) and completion (success notification), drag handle has accessibility labels for screen readers (UX-03 fully addressed)
+Category drag mechanism is visually clearer (prominent green "reorder-two" icon + "Hold" text instruction), provides haptic feedback at start (medium impact) and completion (success notification), drag handle has accessibility labels for screen readers (UX-03 fully addressed)
   </done>
 </task>
 
@@ -354,9 +351,11 @@ Category drag mechanism is visually clearer (prominent green icon + "Hold" text 
 <verification>
 Visual and tactile feedback improvements complete when:
 - Rename interface distinguishes add vs edit mode with contextual placeholders and helper text
+- Keyboard appears automatically when modal opens (autoFocus behavior verified)
 - Category create/update/delete operations show toast notifications (not blocking alerts)
+- Toasts appear ABOVE modal content (proper z-index layering verified)
 - Errors and destructive confirmations still use Alert.alert() appropriately
-- Drag handle has visual affordance (darker icon + "Hold" text)
+- Drag handle has visual affordance (darker green "reorder-two" icon + "Hold" text)
 - Drag operations trigger haptic feedback at start and completion
 - All feedback follows UX research best practices (3sec toasts, appropriate haptic types)
 - Accessibility labels added to drag affordances
@@ -368,6 +367,7 @@ Visual and tactile feedback improvements complete when:
 - UX-04 fully addressed: Category changes provide clear visual confirmation via toast notifications
 - Non-blocking feedback pattern established for future use in other modals
 - Haptic feedback pattern established for drag operations across app
+- Plans 03-02 and 03-03 can run in parallel safely (no file conflicts, both depend only on 03-01 toast infrastructure)
 </success_criteria>
 
 <output>
